a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_zhou/invalid1.min
# variable redeclaration

var x: int;
var y: float;
var x: int;

